--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,21 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id "com.google.gms.google-services" version "4.3.13" apply false
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'androidx.navigation.safeargs' version '2.5.3' apply false
+}
+
+ext{
+    androidx_core_version = "1.9.0"
+    androidx_appcompat_version = "1.5.1"
+    android_material_version = "1.7.0"
+    androidx_constraintlayout_version= "2.1.4"
+
+    firebase_bom_version="31.1.1"
+
+    hilt_version = "2.44"
+
+    nav_version = "2.5.3"
+
 }
